Fix spacing

--- a/front/src/Components/ShoppingBook/ShoppingBook.module.css
+++ b/front/src/Components/ShoppingBook/ShoppingBook.module.css
@@ -450,20 +450,12 @@ body {
     }
 
 
-
     .itemTotales {
         font-weight: bolder;
         /* font-family: Quicksand; */
         font-size: 16px;
         color: black;
         text-align: center;
-    }
-
-
-    .containerDirecciones {
-        width: 100%;
-        padding-top: 2rem;
-        /* height: 20rem; */
     }
 
 
@@ -526,6 +518,7 @@ body {
         justify-content: center;
         align-items: center;
         flex-direction: column;
+        text-align: center;
     }
 
     .textoVacio{
